In machine_learning_template.ipynb, EDA > Univariate EDA > Categorical Columns section: Add code to calculate and show frequencies for all categorical columns, update section header and use X_train instead of df

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -1673,15 +1673,7 @@
    "id": "775bdb25-d466-48d1-bf2f-f2168e7bd774",
    "metadata": {},
    "source": [
-    "#### Frequencies"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "5735f52c-eb16-4658-a566-0fcebf883180",
-   "metadata": {},
-   "source": [
-    "Single Column:"
+    "**Descriptive Statistics** "
    ]
   },
   {
@@ -1689,7 +1681,7 @@
    "id": "d9b9fe5a-ecf0-4388-8a9d-88590fa48f89",
    "metadata": {},
    "source": [
-    "Absolute and relative frequencies of a single categorical colum:"
+    "Frequencies of single categorical colum."
    ]
   },
   {
@@ -1700,12 +1692,49 @@
    "outputs": [],
    "source": [
     "# Calculate absolute and relative frequencies \n",
-    "absolute_frequencies = df[\"categorical_column\"].value_counts()\n",
-    "relative_frequencies = absolute_frequencies / absolute_frequencies.sum() * 100\n",
+    "absolute_frequencies = X_train[\"categorical_column\"].value_counts()\n",
+    "relative_frequencies = X_train[\"categorical_column\"].value_counts(normalize=True) * 100  # in percent\n",
+    "\n",
+    "# Show frequency table\n",
+    "pd.concat([absolute_frequencies, relative_frequencies], axis=1, keys=[\"absolute_frequency\", \"relative_frequency\"]).reset_index()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ed16eb1b-646b-4d73-9ab9-de94304d7eed",
+   "metadata": {},
+   "source": [
+    "Frequencies of all categorical columns."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b4d25de1-e640-488f-b441-7c1f76ea550d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Function to calculate frequencies for all categorical columns\n",
+    "def calculate_frequencies(df, categorical_columns):\n",
+    "    frequencies = {}\n",
+    "    for column in categorical_columns:\n",
+    "        absolute_frequencies = df[column].value_counts()\n",
+    "        relative_frequencies = df[column].value_counts(normalize=True) * 100  # in percent\n",
+    "\n",
+    "        # Create frequency table\n",
+    "        frequency_table = pd.concat([absolute_frequencies, relative_frequencies], axis=1, keys=[\"absolute_frequency\", \"relative_frequency\"]).reset_index()\n",
+    "        \n",
+    "        # Add single column frequency table to dictionary for all columns\n",
+    "        frequencies[column] = frequency_table\n",
+    "    return frequencies\n",
+    "\n",
+    "# Calculate frequencies of all categorical and boolean columns\n",
+    "frequencies = calculate_frequencies(X_train, categorical_columns + boolean_columns)\n",
     "\n",
     "# Show frequencies\n",
-    "print(f\"Absolute frequencies:\\n {absolute_frequencies}\\n\")\n",
-    "print(f\"Relative frequencies:\\n {relative_frequencies.round(1)}\")"
+    "for column, frequency_table in frequencies.items():\n",
+    "    print(f\"{column.title()} Frequencies:\")\n",
+    "    print(f\"{frequency_table}\\n\")"
    ]
   },
   {
