In machine_learning_template.ipynb, EDA > Univariate EDA > Categorical Columns section: Add Visualize Distributions section with bar plot of single categorical column

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -1739,10 +1739,18 @@
   },
   {
    "cell_type": "markdown",
+   "id": "a7377699-74d6-49dc-a4dd-8434a4c42171",
+   "metadata": {},
+   "source": [
+    "**Visualize Distributions** "
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "b057fa22-fe17-4ea5-8558-cd8454ac77d6",
    "metadata": {},
    "source": [
-    "Bar plot of frequencies of a single categorical colum:"
+    "Bar plot of single categorical colum."
    ]
   },
   {
@@ -1753,11 +1761,12 @@
    "outputs": [],
    "source": [
     "# Bar plot\n",
-    "sns.barplot(x=absolute_frequencies.index, y=absolute_frequencies.values, palette=\"colorblind\")\n",
+    "sns.barplot(x=frequencies[\"categorical_column\"][\"categorical_column\"], y=frequencies[\"categorical_column\"][\"relative_frequency\"])\n",
     "\n",
     "# Add title and axes labels \n",
     "plt.title(\"categorical_column\")\n",
-    "plt.ylabel(\"Frequency\")\n",
+    "plt.ylabel(\"Frequency (%)\")\n",
+    "plt.xlabel(\"\")\n",
     "\n",
     "# Rotate x-axis tick labels by 45 degrees\n",
     "plt.xticks(rotation=45)\n",
