In machine_learning_template.ipynb, EDA > Univariate EDA > Categorical Columns section: Update bar plot matrix that shows frequencies of all categorical columns

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -1777,81 +1777,38 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5c44f3be-22bb-498c-9560-8a53cbe51cee",
-   "metadata": {},
-   "source": [
-    "Multiple Columns:"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "c1b9fb2d-babe-4c40-a375-d697bc98ee5f",
    "metadata": {},
    "source": [
-    "Absolute and relative frequencies of multiple categorical colums:"
+    "Bar plot matrix that shows frequencies of all categorical columns.  \n",
+    "Example code for 9 bar plots in a 3x3 matrix."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e5c4b6e5-237c-47df-8d5d-862bd031ef1a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Initialize dictionaries to store frequencies for multiple categorical columns\n",
-    "absolute_frequencies_dict = {}\n",
-    "relative_frequencies_dict = {}\n",
-    "\n",
-    "# Iterate over the categorical columns\n",
-    "for categorical_column in categorical_columns:\n",
-    "    # Calculate absolute and relative frequencies \n",
-    "    absolute_frequencies = df[categorical_column].value_counts()\n",
-    "    relative_frequencies = absolute_frequencies / absolute_frequencies.sum() * 100\n",
-    "\n",
-    "    # Store frequencies\n",
-    "    absolute_frequencies_dict[categorical_column] = absolute_frequencies\n",
-    "    relative_frequencies_dict[categorical_column] = relative_frequencies\n",
-    "\n",
-    "    # Show frequencies\n",
-    "    print(categorical_column.upper())\n",
-    "    print(f\"Absolute frequencies:\\n {absolute_frequencies}\\n\")\n",
-    "    print(f\"Relative frequencies (%):\\n {relative_frequencies.round(1)}\")\n",
-    "    print(\"=\" * 50 + \"\\n\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "7d3edff6-44e4-4e07-abd7-38d1fcb178cf",
-   "metadata": {},
-   "source": [
-    "Bar plot matrix that shows frequencies for multiple categorical columns.  \n",
-    "Example code for 5 bar plots in a 2x3 matrix:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "651f74b5-524c-4517-97bb-af5d7a401c5c",
+   "id": "a35e39a4-2777-40f8-a3a4-0ed9fa81d6e1",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Set the figure size\n",
-    "plt.figure(figsize=(12, 6))\n",
+    "plt.figure(figsize=(12, 12))\n",
     "\n",
-    "# Iterate over the categorical columns\n",
-    "for i, categorical_column in enumerate(categorical_columns):\n",
-    "    # Create a subplot in a 2x3 grid (current subplot i+1 because subplot indices start at 1)\n",
-    "    plt.subplot(2, 3, i + 1)\n",
+    "# Iterate over all categorical and boolean columns\n",
+    "for i, column in enumerate(categorical_columns + boolean_columns):\n",
+    "    # Create a subplot in a 3x3 grid (current subplot i+1 because subplot indices start at 1)\n",
+    "    plt.subplot(3, 3, i + 1)\n",
     "    \n",
     "    # Calculate frequencies for the current column\n",
-    "    absolute_frequencies = df[categorical_column].value_counts()\n",
+    "    frequencies = X_train[column].value_counts(normalize=True)  # For absolute frequencies: normalize=False\n",
     "    \n",
     "    # Create bar plot for the current column\n",
-    "    sns.barplot(x=absolute_frequencies.index, y=absolute_frequencies.values, estimator=np.median, ci=None)\n",
+    "    sns.barplot(x=frequencies.index, y=frequencies.values)\n",
     "    \n",
     "    # Add title and axes labels\n",
-    "    plt.title(categorical_column.title())\n",
+    "    plt.title(column.title())\n",
     "    plt.ylabel(\"Frequency\")\n",
+    "    plt.xlabel(\"\")\n",
     "\n",
     "    # Rotate x-axis tick labels by 45 degrees\n",
     "    plt.xticks(rotation=45)\n",
