--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -1626,7 +1626,8 @@
    "id": "1357efeb-5ad1-4e15-875c-fce5e3a1b470",
    "metadata": {},
    "source": [
-    "Histogram matrix to show the distribution of all numerical columns in a 2x3 matrix."
+    "Histogram matrix that shows the distribution of all numerical columns.  \n",
+    "Example code for 6 histograms in a 2x3 matrix."
    ]
   },
   {
@@ -1716,15 +1717,17 @@
    "source": [
     "# Function to calculate frequencies for all categorical columns\n",
     "def calculate_frequencies(df, categorical_columns):\n",
+    "    # Initialize dictionary to store frequency tables of all categorical columns\n",
     "    frequencies = {}\n",
     "    for column in categorical_columns:\n",
+    "        # Calculate absolute and relative frequencies for current column\n",
     "        absolute_frequencies = df[column].value_counts()\n",
     "        relative_frequencies = df[column].value_counts(normalize=True) * 100  # in percent\n",
     "\n",
     "        # Create frequency table\n",
     "        frequency_table = pd.concat([absolute_frequencies, relative_frequencies], axis=1, keys=[\"absolute_frequency\", \"relative_frequency\"]).reset_index()\n",
     "        \n",
-    "        # Add single column frequency table to dictionary for all columns\n",
+    "        # Add frequency table for current column to dictionary \n",
     "        frequencies[column] = frequency_table\n",
     "    return frequencies\n",
     "\n",
