In machine_learning_template.ipynb > EDA > Univariate EDA > Categorical Columns section: Rename index column in frequency tables to categorical_label

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -1711,13 +1711,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b4d25de1-e640-488f-b441-7c1f76ea550d",
+   "id": "b0a9788d-1626-46a7-80dd-bbcaaf6d3ad9",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Function to calculate frequencies for all categorical columns\n",
+    "# Function to create frequency tables for all categorical columns \n",
     "def calculate_frequencies(df, categorical_columns):\n",
-    "    # Initialize dictionary to store frequency tables of all categorical columns\n",
+    "    # Initialize dictionary to store all frequency tables \n",
     "    frequencies = {}\n",
     "    for column in categorical_columns:\n",
     "        # Calculate absolute and relative frequencies for current column\n",
@@ -1725,16 +1725,18 @@
     "        relative_frequencies = df[column].value_counts(normalize=True) * 100  # in percent\n",
     "\n",
     "        # Create frequency table\n",
-    "        frequency_table = pd.concat([absolute_frequencies, relative_frequencies], axis=1, keys=[\"absolute_frequency\", \"relative_frequency\"]).reset_index()\n",
+    "        frequency_table = pd.concat([absolute_frequencies, relative_frequencies], axis=1).reset_index()\n",
+    "        frequency_table.columns = [\"categorical_label\", \"absolute_frequency\", \"relative_frequency\"] \n",
     "        \n",
     "        # Add frequency table for current column to dictionary \n",
     "        frequencies[column] = frequency_table\n",
     "    return frequencies\n",
     "\n",
-    "# Calculate frequencies of all categorical and boolean columns\n",
+    "\n",
+    "# Apply function to create frequency tables\n",
     "frequencies = calculate_frequencies(X_train, categorical_columns + boolean_columns)\n",
     "\n",
-    "# Show frequencies\n",
+    "# Show frequency tables\n",
     "for column, frequency_table in frequencies.items():\n",
     "    print(f\"{column.title()} Frequencies:\")\n",
     "    print(f\"{frequency_table}\\n\")"
