In machine_learning_template.ipynb > EDA > Univariate EDA > Categorical Columns section: Rename frequencies to column_frequencies in bar plot matrix

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -1766,7 +1766,8 @@
    "outputs": [],
    "source": [
     "# Bar plot\n",
-    "sns.barplot(x=frequencies[\"categorical_column\"][\"categorical_column\"], y=frequencies[\"categorical_column\"][\"relative_frequency\"])\n",
+    "sns.barplot(x=frequencies[\"categorical_column\"][\"categorical_label\"], \n",
+    "            y=frequencies[\"categorical_column\"][\"relative_frequency\"])\n",
     "\n",
     "# Add title and axes labels \n",
     "plt.title(\"categorical_column\")\n",
@@ -1805,10 +1806,10 @@
     "    plt.subplot(3, 3, i + 1)\n",
     "    \n",
     "    # Calculate frequencies for the current column\n",
-    "    frequencies = X_train[column].value_counts(normalize=True)  # For absolute frequencies: normalize=False\n",
+    "    column_frequencies = X_train[column].value_counts(normalize=True)  # For absolute frequencies: normalize=False\n",
     "    \n",
     "    # Create bar plot for the current column\n",
-    "    sns.barplot(x=frequencies.index, y=frequencies.values)\n",
+    "    sns.barplot(x=column_frequencies.index, y=column_frequencies.values)\n",
     "    \n",
     "    # Add title and axes labels\n",
     "    plt.title(column.title())\n",
