In machine_learning_template.ipynb > EDA > Univariate EDA > Categorical Columns section: Add horizontal bar plot of single categorical column

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -1783,6 +1783,45 @@
   },
   {
    "cell_type": "markdown",
+   "id": "d54d534e-8310-404d-8b9e-16b606f32b1b",
+   "metadata": {},
+   "source": [
+    "Horizontal bar plot of single categorical colum. Useful for columns with high cardinality (i.e., a large number of unique categories)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5ad25df1-89b1-455b-8c36-e19c85d25688",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Set the figure size\n",
+    "plt.figure(figsize=(6, 12))\n",
+    "\n",
+    "# Create the bar plot\n",
+    "ax = sns.barplot(x=frequencies[\"categorical_column\"][\"relative_frequency\"], \n",
+    "                 y=frequencies[\"categorical_column\"][\"categorical_label\"])\n",
+    "\n",
+    "# Add value labels inside the bars\n",
+    "for i, value in enumerate(frequencies[\"categorical_column\"][\"relative_frequency\"]):\n",
+    "    ax.text(value - 0.05,  # x position (0.05% from right end)\n",
+    "            i,    # y position\n",
+    "            f\"{value:.1f}%\",  # text (frequency with 1 decimal place)\n",
+    "            ha=\"right\",  # horizontal alignment\n",
+    "            va=\"center\") # vertical alignment\n",
+    "\n",
+    "# Add title and axes labels \n",
+    "plt.title(\"categorical_column\")\n",
+    "plt.ylabel(\"\")\n",
+    "plt.xlabel(\"Frequency (%)\")\n",
+    "\n",
+    "# Show the plot\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "c1b9fb2d-babe-4c40-a375-d697bc98ee5f",
    "metadata": {},
    "source": [
