In machine_learning_template.ipynb > EDA > Bivariate EDA > Numerical with Numerical section: Rename section to Numerical x Numerical and update markdown documentation comments

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -1871,7 +1871,7 @@
    "metadata": {},
    "source": [
     "## Bivariate EDA  \n",
-    "Bivariate exploratory data analysis (EDA) examines relationships between two columns using methods such as correlation analysis, scatterplots, group-wise statistics, and bar plots."
+    "Analyze relationships between two columns using correlations, scatter plots, group-wise statistics, and bar plots."
    ]
   },
   {
@@ -1879,8 +1879,8 @@
    "id": "a539fa8d-ba5c-42e9-bf4c-7e178a87ff1c",
    "metadata": {},
    "source": [
-    "### Numerical with Numerical  \n",
-    "Analyze relationships between two numerical columns using correlation methods and visualizations like scatterplots. "
+    "### Numerical x Numerical  \n",
+    "Analyze relationships between two numerical columns using correlation coefficients and scatter plots. "
    ]
   },
   {
@@ -2024,7 +2024,15 @@
    "id": "54741433-1f70-4248-982e-318bba474e15",
    "metadata": {},
    "source": [
-    "#### Scatterplot"
+    "#### Scatter Plots"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fc6d20c9-164e-4136-a7b5-fec7dd9a8ade",
+   "metadata": {},
+   "source": [
+    "Scatter plot between two numerical columns."
    ]
   },
   {
@@ -2054,9 +2062,8 @@
    "id": "4a6c0cc0-34f1-4f4c-b8d0-2243ce6f4e4d",
    "metadata": {},
    "source": [
-    "#### Scatterplot Matrix \n",
-    "Scatterplot matrix that shows scatterplots between a numerical column (e.g., the target variable) and each other numerical column.   \n",
-    "Example code for 9 scatterplots in a 3x3 matrix:"
+    "Scatter plot matrix that shows the relationships between all numerical columns.  \n",
+    "Example code for 6 numerical columns, resulting in 15 scatter plots in a 5x3 matrix."
    ]
   },
   {
