In machine_learning_template.ipynb > EDA > Bivariate EDA > Numerical x Numerical > Correlations section: Update and combine code for correlation matrix, heatmap and saving heatmap to file in single code cell

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -1892,111 +1892,50 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "6dedb34a-4995-4e6d-9024-b526c26002a8",
-   "metadata": {},
-   "source": [
-    "Correlation matrix:"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "30a94e3f-694d-4b05-9436-fbeaf82f748f",
+   "id": "48adccf6-2fde-4f6e-bff1-ba0b9aa53413",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Combine numerical and boolean columns for correlation analysis\n",
-    "combined_columns = numerical_columns + boolean_columns\n",
+    "# Merge X_train and y_train to have all numerical columns (including features and target variable) in a single DataFrame\n",
+    "df_train = pd.concat([X_train, y_train], axis=1)\n",
     "\n",
-    "# Calculate the correlation matrix \n",
-    "correlation_matrix = df[combined_columns].corr()\n",
+    "# Create correlation matrix and round to 2 decimals\n",
+    "correlation_matrix = round(df_train[numerical_columns + boolean_columns].corr(), 2)\n",
     "\n",
-    "# Round correlations to 2 decimals\n",
-    "correlation_matrix = round(correlation_matrix, 2)\n",
+    "# Create upper triangle mask (k=1 excludes diagonal)\n",
+    "mask = np.triu(np.ones(correlation_matrix.shape), k=1).astype(bool) \n",
     "\n",
-    "# Create an upper triangle mask (k=1 excludes the diagonal)\n",
-    "mask = np.triu(np.ones(correlation_matrix.shape), k=1).astype(bool)\n",
-    "\n",
-    "# Set upper triangle to NaN to avoid redundant information\n",
+    "# Set upper triangle to NaN to avoid redundancy\n",
     "correlation_matrix[mask] = np.nan\n",
     "\n",
-    "# Show correlation matrix\n",
-    "correlation_matrix"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "83902fe5-8ac2-4f64-bf9b-33e84fefb781",
-   "metadata": {},
-   "source": [
-    "Correlation heatmap:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "23f6eda3-d6aa-4578-8f55-d80d3e7153aa",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Set the figure size\n",
-    "plt.figure(figsize=(8, 6))\n",
-    "\n",
     "# Create heatmap\n",
+    "plt.figure(figsize=(8, 6))\n",
     "sns.heatmap(\n",
     "    correlation_matrix, \n",
-    "    cmap=\"viridis\",  # Color map choice\n",
-    "    annot=True,  # Show numbers\n",
+    "    cmap=\"viridis\",  # Colorblind-friendly colormap (other options: \"cividis\", \"magma\", \"YlOrBr\", \"RdBu\") \n",
+    "    annot=True,  # Show correlation values\n",
     "    linewidth=0.5  # Thin white lines between cells\n",
     ")\n",
-    "\n",
-    "# Add title\n",
     "plt.title(\"Correlation Heatmap\")\n",
-    "\n",
-    "# Adjust layout to prevent cutting off labels\n",
     "plt.tight_layout()\n",
     "\n",
-    "# Show the plot\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "d92936fd-c3a7-4441-83b1-7bca48db2323",
-   "metadata": {},
-   "source": [
-    "Save correlation heatmap as an image:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "89a8b750-799b-4b7b-8ba4-7cb2cafc9064",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Imports\n",
-    "import os\n",
-    "\n",
-    "# Create \"images\" directory if it doesn't exist\n",
-    "os.makedirs(\"images\", exist_ok=True)\n",
-    "\n",
-    "# Save the heatmap as a .png image\n",
+    "# Save heatmap to file\n",
+    "os.makedirs(\"images\", exist_ok=True)  \n",
     "try:\n",
-    "    # Construct full file path\n",
-    "    image_path = os.path.join(\"images\", \"correlation_heatmap.png\") \n",
-    "    \n",
-    "    # Save the heatmap  \n",
+    "    image_path = os.path.join(\"images\", \"correlation_heatmap.png\")  # In \"images\" directory as .png file \n",
     "    plt.savefig(\n",
     "        image_path, \n",
-    "        bbox_inches=\"tight\",  # removes unnecessary whitespace\n",
-    "        dpi=300  # higher image quality\n",
+    "        bbox_inches=\"tight\",  # Removes unnecessary whitespace\n",
+    "        dpi=144  # Good balance of quality vs. file size\n",
     "    )\n",
     "    print(f\"Correlation heatmap saved successfully to {image_path}\")\n",
-    "\n",
     "except Exception as e:\n",
-    "    print(f\"Error saving correlation heatmap: {e}\")"
+    "    print(f\"Error saving correlation heatmap: {e}\")\n",
+    "\n",
+    "# Show heatmap\n",
+    "plt.show()"
    ]
   },
   {
