In machine_learning_template.ipynb > EDA > Bivariate EDA > Numerical x Numerical > Correlations section: Update code for feature-target correlations by order of magnitude

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -1943,19 +1943,18 @@
    "id": "6382adcc-1fdb-48b7-8f2a-6d27a559bbfc",
    "metadata": {},
    "source": [
-    "Correlations of target variable with features:"
+    "Feature-target correlations by order of magnitude."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3675dca5-3693-4669-8da3-6d97648bc5be",
+   "id": "66e3e9d0-e31d-4d8a-a1be-66ab44bf5e61",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Correlations between the numerical target variable and each numerical and boolean feature\n",
-    "combined_columns = numerical_columns + boolean_columns\n",
-    "df[combined_columns].corr()[\"numerical_target\"].sort_values(ascending=False)"
+    "# Feature-target correlations sorted by absolute values in descending order \n",
+    "df_train[numerical_columns + boolean_columns].corr()[\"numerical_target\"].sort_values(key=abs, ascending=False)"
    ]
   },
   {
