In machine_learning_template.ipynb > EDA > Bivariate EDA > Numerical x Numerical > Scatter Plots section: Update scatter plot between two numerical columns

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -1980,18 +1980,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Set the figure size\n",
+    "# Set figure size\n",
     "plt.figure(figsize=(8, 6))\n",
     "\n",
-    "# Create the scatterplot \n",
-    "sns.scatterplot(data=df, x=\"numerical_column_1\", y=\"numerical_column_2\")\n",
+    "# Create scatter plot \n",
+    "sns.scatterplot(data=df_train, x=\"numerical_column_1\", y=\"numerical_column_2\")\n",
     "\n",
     "# Add title and axis labels\n",
     "plt.title(\"Relationship between numerical_column_1 and numerical_column_2\")\n",
     "plt.xlabel(\"numerical_column_1\")\n",
     "plt.ylabel(\"numerical_column_2\")\n",
     "\n",
-    "# Show the plot\n",
+    "# Show plot\n",
     "plt.show()"
    ]
   },
