In machine_learning_template.ipynb > EDA > Bivariate EDA > Numerical x Numerical > Scatter Plots section: Add scatter plot matrix between all numerical columns

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -2007,34 +2007,49 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "36f4a478-acd0-4f18-99f8-81f9247250bd",
+   "id": "43168e1d-30d0-4fe5-b329-00a4df45df14",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Set the figure size \n",
-    "plt.figure(figsize=(12, 12))\n",
+    "# Imports\n",
+    "import itertools\n",
+    "import math\n",
     "\n",
-    "# List of numerical columns excluding the target column\n",
-    "numerical_columns_without_target = [col for col in numerical_columns if col != \"numerical_target\"]\n",
-    "\n",
-    "# Iterate over the numerical columns\n",
-    "for i, numerical_column in enumerate(numerical_columns_without_target):\n",
-    "    # Create a subplot in a 3x3 grid (current subplot i+1 because subplot indices start at 1)\n",
-    "    plt.subplot(3, 3, i + 1)\n",
+    "# Function to create scatter plot matrix\n",
+    "def scatterplot_matrix(df, numerical_columns):\n",
+    "    # Get all possible pairs of numerical columns\n",
+    "    column_pairs = list(itertools.combinations(numerical_columns, 2))\n",
     "    \n",
-    "    # Create a scatterplot between the current column and the numerical target\n",
-    "    sns.scatterplot(data=df, x=numerical_column, y=\"numerical_target\")\n",
+    "    # Calculate number of rows and columns needed for the subplot grid\n",
+    "    n_plots = len(column_pairs)\n",
+    "    n_cols = 3  \n",
+    "    n_rows = math.ceil(n_plots / n_cols) \n",
     "    \n",
-    "    # Add title and axis labels \n",
-    "    plt.title(f\"numerical_target by {numerical_column}\")\n",
-    "    plt.xlabel(f\"{numerical_column}\")\n",
-    "    plt.ylabel(\"numerical_target\")\n",
+    "    # Create figure with appropriate size\n",
+    "    # Adjust the multipliers (4, 4) to make plots larger or smaller\n",
+    "    plt.figure(figsize=(n_cols * 4, n_rows * 4))\n",
+    "    \n",
+    "    # Create scatter plots for each combination\n",
+    "    for i, (column_1, column_2) in enumerate(column_pairs):\n",
+    "        # Create subplot\n",
+    "        plt.subplot(n_rows, n_cols, i + 1)\n",
+    "        \n",
+    "        # Create scatter plot\n",
+    "        sns.scatterplot(data=df, x=column_1, y=column_2)\n",
+    "        \n",
+    "        # Add title and labels\n",
+    "        plt.title(f\"{column_2.title()} vs. {column_1.title()}\")\n",
+    "        plt.xlabel(column_1.title())\n",
+    "        plt.ylabel(column_2.title())\n",
+    "    \n",
+    "    # Adjust layout to prevent overlap\n",
+    "    plt.tight_layout()\n",
+    "    \n",
+    "    # Show the plot\n",
+    "    plt.show()\n",
     "\n",
-    "# Adjust layout to prevent overlap\n",
-    "plt.tight_layout()\n",
-    "\n",
-    "# Show the plot\n",
-    "plt.show()"
+    "# Use function to create scatter plot matrix\n",
+    "scatterplot_matrix(df_train, numerical_columns)"
    ]
   },
   {
