In machine_learning_template.ipynb > EDA > Bivariate EDA > Numerical x Categorical > Group-Wise Statistics section: Add statistics of all numerical columns by single categorical column

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -1892,6 +1892,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "74e55dda-a9f0-4d6c-a7f1-4ec6e2f5f047",
+   "metadata": {},
+   "source": [
+    "Correlation heatmap of all numerical and boolean columns. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "48adccf6-2fde-4f6e-bff1-ba0b9aa53413",
@@ -2057,8 +2065,8 @@
    "id": "73cdbe81-6e4d-48b4-ae69-07336924ce94",
    "metadata": {},
    "source": [
-    "### Numerical with Categorical  \n",
-    "Examine relationships between a numerical column and a categorical column using group-wise statistics (such as median or mean by category), and visualizations like bar plots to compare statistics by category."
+    "### Numerical x Categorical  \n",
+    "Analyze relationships between a numerical column and a categorical column using group-wise statistics (e.g., median or mean by category) and bar plots to compare statistics by category."
    ]
   },
   {
@@ -2067,7 +2075,7 @@
    "metadata": {},
    "source": [
     "#### Group-Wise Statistics \n",
-    "Descriptive statistics of a numerical column grouped by categories in a categorical column."
+    "Descriptive statistics of single numerical column by single categorical column."
    ]
   },
   {
@@ -2078,8 +2086,27 @@
    "outputs": [],
    "source": [
     "# Descriptive statistics of numerical column by categorical column\n",
-    "numerical_by_category = df[\"numerical_column\"].groupby(df[\"categorical_column\"])\n",
-    "numerical_by_category.describe()"
+    "stats_by_category = df_train[\"numerical_column\"].groupby(df[\"categorical_column\"]).describe()\n",
+    "stats_by_category"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3dd4d97c-92fb-4545-9d83-c95ad1181278",
+   "metadata": {},
+   "source": [
+    "Descriptive statistics (median, mean, std) of all numerical columns by single categorical column."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d7ca8415-b881-495b-8d09-2c6d354035e0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "stats_by_category = df_train[numerical_columns].groupby(df_train[\"categorical_column\"]).agg([\"median\", \"mean\", \"std\"]).transpose()\n",
+    "stats_by_category"
    ]
   },
   {
