In machine_learning_template.ipynb > EDA > Bivariate EDA > Numerical x Categorical > Group-Wise Statistics section: Add effect size using cohen's d for quantifying the magnitude of the difference between two groups

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -2075,7 +2075,7 @@
    "metadata": {},
    "source": [
     "#### Group-Wise Statistics \n",
-    "Descriptive statistics of single numerical column by single categorical column."
+    "Descriptive statistics of a single numerical column grouped by a single categorical column."
    ]
   },
   {
@@ -2095,7 +2095,7 @@
    "id": "3dd4d97c-92fb-4545-9d83-c95ad1181278",
    "metadata": {},
    "source": [
-    "Descriptive statistics (median, mean, std) of all numerical columns by single categorical column."
+    "Descriptive statistics of all numerical columns grouped by a single categorical column. Focus on median, mean, and std for easier readability."
    ]
   },
   {
@@ -2107,6 +2107,44 @@
    "source": [
     "stats_by_category = df_train[numerical_columns].groupby(df_train[\"categorical_column\"]).agg([\"median\", \"mean\", \"std\"]).transpose()\n",
     "stats_by_category"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "271c168c-7350-4ea4-8248-593316e936e8",
+   "metadata": {},
+   "source": [
+    "Effect Size: Quantify the magnitude of the difference between two groups using Cohen's d."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "790655d2-8f58-468c-a2e9-7103734a998b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Function to calculate Cohen's d\n",
+    "def cohens_d(df, numerical_column, categorical_column, group_1, group_2):\n",
+    "    x1 = df[df[categorical_column] == group_1][numerical_column]\n",
+    "    x2 = df[df[categorical_column] == group_2][numerical_column]\n",
+    "    \n",
+    "    mean1, mean2 = np.mean(x1), np.mean(x2)\n",
+    "    std1, std2 = np.std(x1, ddof=1), np.std(x2, ddof=1)  # Sample standard deviation using N−1\n",
+    "    n1, n2 = len(x1), len(x2)\n",
+    "    \n",
+    "    pooled_std = np.sqrt(((n1 - 1) * std1**2 + (n2 - 1) * std2**2) / (n1 + n2 - 2))\n",
+    "    \n",
+    "    return (mean1 - mean2) / pooled_std if pooled_std != 0 else 0\n",
+    "\n",
+    "# Use function to calculate Cohen's d for a single numerical column\n",
+    "cohens_d_result = cohens_d(df_train, \"numerical_column\", \"categorical_column\", \"category_1\", \"category_2\")\n",
+    "print(f\"Cohen's d: {cohens_d_result}\")\n",
+    "\n",
+    "# Use function to calculate Cohen's d for all numerical columns\n",
+    "cohens_d_results = {column: cohens_d(df_train, column, \"categorical_column\", \"category_1\", \"category_2\") for column in numerical_columns}\n",
+    "cohens_d_results = pd.DataFrame.from_dict(cohens_d_results, orient=\"index\", columns=[\"Cohen's d\"])\n",
+    "cohens_d_results"
    ]
   },
   {
