In machine_learning_template.ipynb > EDA > Bivariate EDA > Numerical x Categorical > Bar Plots section: Add bar plot matrix that shows the median of all numerical columns by a single categorical column

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -2152,8 +2152,15 @@
    "id": "7fd0cd54-3004-408b-a1b6-4874e034fd71",
    "metadata": {},
    "source": [
-    "#### Bar Plot  \n",
-    "Bar plot of the median of a numerical column by a single categorical column."
+    "#### Bar Plots"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f6acc3f3-f656-4dc9-a761-30d20d9d4425",
+   "metadata": {},
+   "source": [
+    "Bar plot of the median of a single numerical column by a single categorical column."
    ]
   },
   {
@@ -2164,7 +2171,7 @@
    "outputs": [],
    "source": [
     "# Store the median of the numerical column by category\n",
-    "median_by_category = numerical_by_category.median()\n",
+    "median_by_category = stats_by_category.median()\n",
     "\n",
     "# Bar plot of median by category\n",
     "sns.barplot(x=median_by_category.index, y=median_by_category.values, palette=\"colorblind\")\n",
@@ -2180,12 +2187,50 @@
   },
   {
    "cell_type": "markdown",
+   "id": "8284c210-2e79-4152-903d-71a2f4e98cfa",
+   "metadata": {},
+   "source": [
+    "Bar plot matrix that shows the median of all numerical columns by a single categorical column (e.g., the categorical target variable).  \n",
+    "Example code for 6 bar plots in a 2x3 matrix."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f2446028-a40c-414f-8835-bb853fbff77a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Set figure size\n",
+    "plt.figure(figsize=(12, 8))\n",
+    "\n",
+    "# Iterate over all numerical columns\n",
+    "for i, column in enumerate(numerical_columns):\n",
+    "    # Create a subplot in a 2x3 grid (current subplot i+1 because subplot indices start at 1)\n",
+    "    plt.subplot(2, 3, i + 1)\n",
+    "    \n",
+    "    # Create a bar plot for the current numerical column by the categorical column\n",
+    "    sns.barplot(data=df_train, x=\"categorical_column\", y=column, estimator=np.median, errorbar=None)\n",
+    "    \n",
+    "    # Add title and axes labels\n",
+    "    plt.title(f\"Median {column.title()} by categorical_column\")\n",
+    "    plt.xlabel(\"categorical_column\")\n",
+    "    plt.ylabel(column.title())\n",
+    "\n",
+    "# Adjust layout to prevent overlap\n",
+    "plt.tight_layout()\n",
+    "\n",
+    "# Show the plot\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "23ec66e0-2f7f-49c4-847b-f7b696217640",
    "metadata": {},
    "source": [
-    "#### Bar Plot Matrix  \n",
-    "Bar plot matrix that shows bar plots between a single numerical column (e.g., the target variable) and each categorical column.  \n",
-    "Example code for 5 bar plots in a 2x3 matrix:"
+    "Bar plot matrix that shows the median of a single numerical column (e.g., the numerical target variable) by all categorical columns.  \n",
+    "Example code for 5 bar plots in a 2x3 matrix."
    ]
   },
   {
