In machine_learning_template.ipynb > EDA > Bivariate EDA > Numerical x Categorical > Bar Plots section: Add bar plot matrix that shows the median of a single numerical column by all categorical columns

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -2220,7 +2220,7 @@
     "# Adjust layout to prevent overlap\n",
     "plt.tight_layout()\n",
     "\n",
-    "# Show the plot\n",
+    "# Show plot\n",
     "plt.show()"
    ]
   },
@@ -2240,26 +2240,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Set the figure size to 12x6 inches\n",
-    "plt.figure(figsize=(12, 6))\n",
+    "# Set figure size \n",
+    "plt.figure(figsize=(12, 8))\n",
     "\n",
-    "# Iterate over the categorical columns\n",
-    "for i, categorical_column in enumerate(categorical_columns):\n",
+    "# Iterate over all categorical columns\n",
+    "for i, column in enumerate(categorical_columns):\n",
     "    # Create a subplot in a 2x3 grid (current subplot i+1 because subplot indices start at 1)\n",
     "    plt.subplot(2, 3, i + 1)\n",
     "    \n",
     "    # Create a bar plot of the median of the numerical column by the current categorical column\n",
-    "    ax = sns.barplot(data=df, x=categorical_column, y=\"numerical_column\", estimator=np.median, ci=None)\n",
+    "    ax = sns.barplot(data=df_train, x=column, y=\"numerical_column\", estimator=np.median, errorbar=None)\n",
     "    \n",
     "    # Add title and axes labels\n",
-    "    plt.title(f\"Median numerical_column by {categorical_column}\")\n",
+    "    plt.title(f\"Median numerical_column by {column}\")\n",
     "    plt.xlabel(\"Category\")\n",
     "    plt.ylabel(\"numerical_column\")\n",
     "\n",
     "# Adjust layout to prevent overlap\n",
     "plt.tight_layout()\n",
     "\n",
-    "# Show the plot\n",
+    "# Show plot\n",
     "plt.show()"
    ]
   },
